# backend/models/prescription.model.js
@@ -1,10 +1,22 @@
-const mongoose = require('mongoose');
+const mongoose = require("mongoose");
 
 const prescriptionSchema = new mongoose.Schema(
   {
-    appointment_id: { type: mongoose.Schema.Types.ObjectId, ref: "Appointment", required: true },
-    patient_id: { type: mongoose.Schema.Types.ObjectId, ref: "Patients", required: true },
-    doctor_id: { type: mongoose.Schema.Types.ObjectId, ref: "Employee", required: true },
+    appointment_id: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Appointment",
+      required: true,
+    },
+    patient_id: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Patients",
+      required: true,
+    },
+    doctor_id: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Employee",
+      required: true,
+    },
 
     visit_date: { type: Date, default: Date.now },
 
@@ -15,28 +27,27 @@ const prescriptionSchema = new mongoose.Schema(
     bmi: { type: String },
     spo2: { type: String },
 
-    complaints: { type: String },
+    complaints: [{ type: String }],
 
     medicines: [
       {
         name: { type: String },
         dosage: { type: String },
-        duration: { type: String }
-      }
+        duration: { type: String },
+      },
     ],
 
     advice: { type: String },
     tests_prescribed: { type: String },
     next_visit: { type: String },
     doctor_notes: { type: String },
-    
 
-     // ✅ Prescription status: Draft or Completed
+    // ✅ Prescription status: Draft or Completed
     status: {
       type: String,
       enum: ["Draft", "Completed"],
-      default: "Draft"
-    }
+      default: "Draft",
+    },
   },
   { timestamps: true } // adds created_at and updated_at
 );
